virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "buy.georgeoademo.com.ng"
  gateways:
  - my-gateway
  http:
  - match:
    - port: 80
      uri:
        prefix: "/"
    redirect:
      scheme: https
      port: 443
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: frontend-external.default.svc.cluster.local
        port:
          number: 80
